force-app/main/default/objects/Company_Hierarchy__c/Company_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Company Hierarchy</label>
    <pluralLabel>Company Hierarchies</pluralLabel>
    <nameField>
        <label>Company Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Multi-level company structure for organizational hierarchy management (MOD-01 Master Data Management)</description>
</CustomObject>