force-app/main/default/objects/Company_Hierarchy__c/fields/Active_Child_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Active_Child_Nodes__c</fullName>
    <label>Active Child Nodes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>