force-app/main/default/objects/Company_Hierarchy__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Company Hierarchies</relationshipLabel>
    <relationshipName>Company_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>