force-app/main/default/objects/Company_Hierarchy__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>