force-app/main/default/objects/Company_Hierarchy__c/fields/Hierarchy_Code__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Code__c</fullName>
    <label>Hierarchy Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>