force-app/main/default/objects/Company_Hierarchy__c/fields/Parent_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Parent_Hierarchy__c</fullName>
    <label>Parent Hierarchy</label>
    <type>Lookup</type>
    <referenceTo>Company_Hierarchy__c</referenceTo>
    <relationshipLabel>Child Hierarchies</relationshipLabel>
    <relationshipName>Child_Hierarchies</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>