force-app/main/default/objects/Company_Hierarchy__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Company Hierarchies</relationshipLabel>
    <relationshipName>Company_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>